[workspace]
members = ["proto"]
resolver = "2"

[package]
name = "snapchain"
version = "0.11.6"
edition = "2021"
default-run = "hypersnap"

[lib]
name = "snapchain"
path = "src/lib.rs"

[[bin]]
name = "hypersnap"
path = "src/main.rs"

[dependencies]
snapchain-proto = { path = "proto" }
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
atty = "0.2"
libp2p-connection-limits = "0.5.0"
serde_json = "1.0"
sha2 = "0.10.6"
tonic = { version ="0.12.3", features = ["tls", "tls-native-roots"] }
rustls = { version = "0.23", features = ["ring"] }
prost = "0.13.3"
futures = "0.3.28"
futures-core = "0.3.31"
parking_lot = "0.12.1"
tokio-retry2 = { version = "0.5", features = ["jitter", "tracing"] }
clap = { version = "4.3.0", features = ["derive"] }
libp2p = { version = "0.55.0", features = ["tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic", "request-response"] }
async-trait = "0.1.68"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }
hex = "0.4.3"
ractor = { version = "0.14.6", default-features = false, features = ["async-trait", "tokio_runtime"] }
bytes = "1.9.0"
informalsystems-malachitebft-core-consensus = { path = "../malachite/code/crates/core-consensus" }
informalsystems-malachitebft-engine = { path = "../malachite/code/crates/engine" }
informalsystems-malachitebft-network = { path = "../malachite/code/crates/network" }
informalsystems-malachitebft-sync = { path = "../malachite/code/crates/sync" }
informalsystems-malachitebft-core-types = { path = "../malachite/code/crates/core-types" }
informalsystems-malachitebft-config = { path = "../malachite/code/crates/config" }
informalsystems-malachitebft-codec = { path = "../malachite/code/crates/codec" }
informalsystems-malachitebft-metrics = { path = "../malachite/code/crates/metrics" }
informalsystems-malachitebft-wal = { path = "../malachite/code/crates/wal" }
blake3 = "1.4.1"
tracing = "0.1.40"
thiserror = "1.0.66"
reqwest = { version = "0.12.9", features = ["json", "stream"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
futures-util = "0.3.31"
indicatif = "0.17.7"
url = "2.5.3"
alloy-transport = "0.8.0"
alloy-dyn-abi = { version = "0.8.15", features = ["eip712"] }
alloy-rlp = "0.3.9"
alloy-transport-http = "0.8.0"
alloy-sol-types = { version = "0.8.15", features = ["json"] }
alloy-provider = "0.8.0"
alloy-rpc-types = "0.8.0"
alloy-primitives = "0.8.14"
alloy-contract = "0.8.0"
alloy-signer = "0.8.0"
alloy-signer-local = "0.8.0"
ed25519-dalek = { version = "2.1.1", features = ["batch"] }
pre-commit = "0.5.2"
rocksdb = {git = "https://github.com/rust-rocksdb/rust-rocksdb.git", rev="a4f178d0ca668c4b48d993ab8aef6f4004780f23", features=["multi-threaded-cf", "jemalloc"]}
walkdir = "2.5.0"
once_cell = "1.20.2"
threadpool = "1.8.1"
rand = "0.8.5"
humantime-serde = "1.1.1"
humantime = "2.1.0"
itertools = "0.13.0"
cadence = "1.5.0"
tempfile = "3.13.0"
foundry-common = { git = "https://github.com/foundry-rs/foundry", rev="6b07c77eb1c1d1c4b56ffa7f79240254b73236d2" }
bs58 = "0.5.1"
chrono = "0.4.39"
csv = "1.3"
tar = "0.4.40"
gzp = "0.11.3"
flate2 = "1.0.28"
eth-signature-verifier = { version = "0.3.7", path = "../eth-signature-verifier" }
fancy-regex = "0.14.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.71.0", features = ["behavior-version-latest"] }
hyper = { version = "1.5.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
serde_qs = "0.13.0"
base64 = "0.22.1"
toml = "0.8.19"
tantivy = "0.22"
urlencoding = "2.1"
tokio-cron-scheduler = "0.13.0"
strum = "0.27.1"
strum_macros = "0.27.1"
governor = "0.10.0"
moka = "0.12.10"
# Foundry sets the version of solar-parse to 0.1.1 and these need to be consistent for compilation to succeed. Foundry doesn't have a cargo crate that we can use.
solar-interface = "=0.1.1"
solar-ast = "=0.1.1"
solar-data-structures = "=0.1.1"
solar-macros = "=0.1.1"
solar-config = "=0.1.1"
nix = { version = "0.29", features = ["resource"] }
svm-rs-builds = "0.5.22"
tikv-jemallocator = "0.6"
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
hmac = "0.12.1"
regex = "1.11"
twox-hash = "1.6"


[dev-dependencies]
serial_test = "3.1.1"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
insta = { version = "1.40", features = ["json"] }

[package.metadata.precommit]
fmt = "cargo fmt --check --quiet"
